<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="120dp">

    <ImageView
        android:id="@+id/iv_stars"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="36dp"
        android:contentDescription="@string/star_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_star_border_24dp" />

    <ImageView
        android:id="@+id/iv_popularity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="36dp"
        android:contentDescription="@string/timer_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.253"
        app:layout_constraintStart_toEndOf="@+id/iv_stars"
        app:layout_constraintVertical_bias="0.068"
        app:srcCompat="@drawable/ic_people_outline_24dp" />

    <ImageView
        android:id="@+id/iv_language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="36dp"
        android:contentDescription="@string/icon_language"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toEndOf="@+id/iv_popularity"
        app:srcCompat="@drawable/ic_language_24dp" />

    <TextView
        android:id="@+id/tv_movie_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/movie_score"
        app:layout_constraintBottom_toBottomOf="@+id/tv_movie_popularity"
        app:layout_constraintEnd_toEndOf="@+id/iv_stars"
        app:layout_constraintStart_toStartOf="@+id/iv_stars"
        app:layout_constraintTop_toBottomOf="@+id/iv_stars"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_movie_popularity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/movie_popularity"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/iv_popularity"
        app:layout_constraintStart_toStartOf="@+id/iv_popularity"
        app:layout_constraintTop_toBottomOf="@+id/iv_popularity"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_movie_language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/languange"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/iv_language"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="@+id/iv_language"
        app:layout_constraintTop_toBottomOf="@+id/iv_language"
        app:layout_constraintVertical_bias="0.002" />

</androidx.constraintlayout.widget.ConstraintLayout>