<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/spacing_xmiddle"
    android:layout_marginTop="@dimen/spacing_xmedium"
    android:layout_marginRight="@dimen/spacing_xmiddle"
    android:layout_marginBottom="@dimen/spacing_xmedium"
    android:background="@color/white"
    android:elevation="8dp"
    app:cardCornerRadius="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/padding_normal">

        <com.dicoding.moviecatalogmade.helper.RoundRectCornerImageView
            android:id="@+id/iv_movie_poster"
            android:layout_width="100dp"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:scaleType="centerCrop"
            android:src="@color/colorPrimary" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/spacing_xmedium"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_movie_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title"
                    android:textSize="15sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <TextView
                android:id="@+id/tv_movie_released"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/released_date"
                android:textSize="@dimen/text_small" />

            <TextView
                android:id="@+id/tv_movie_overview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="4"
                android:text="@string/overview"
                android:textSize="@dimen/text_small" />

            <androidx.coordinatorlayout.widget.CoordinatorLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/iv_delete"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_gravity="bottom|end"
                    android:background="@drawable/black_border"
                    android:contentDescription="@string/image"
                    android:padding="6dp"
                    android:src="@drawable/delete_icon" />

            </androidx.coordinatorlayout.widget.CoordinatorLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>
